# INNOVABackend

./: .gitignore  Cargo.toml  Dockerfile  mieszkanie-praga-11-listopada.jpg:Zone.Identifier
src/: main.rs  state.rs
src/database/: conn.rs
src/extractor/: authentication_token.rs
src/handlers/: login_handler.rs  mod.rs  offers_handler.rs  token_handler.rs
src/middleware/: auth_header_middleware.rs  mod.rs
src/models/: auth.rs  login.rs  mod.rs  offers.rs
src/modules/: hash_password.rs  jwt_token.rs  mod.rs  offer_res.rs  stock_image.rs
src/queries/: get_offers.sql  get_user.sql  insert_offer.sql  insert_user.sql
src/routes/: routes.rs
src/tests/: unit_tests.rs
